--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,11 @@
+# Build artifacts:
 node_modules
-__pycache__
 build
+# Generated files:
+__pycache__
+# venv:
 p9
+# Configuration files:
 .env
 start.sh
 webpack.config.js
