--- a/requirements.txt
+++ b/requirements.txt
@@ -16,7 +16,9 @@ dockerpty==0.4.1
 docopt==0.6.2
 Flask==3.0.0
 Flask-Cors==4.0.0
+Flask-SQLAlchemy==3.1.1
 fs==2.4.16
+greenlet==3.0.2
 idna==3.6
 importlib-metadata==7.0.0
 itsdangerous==2.1.2
@@ -33,7 +35,9 @@ python-dotenv==0.21.1
 # pywin32
 PyYAML==5.4.1
 requests==2.31.0
+schedule==1.2.1
 six==1.16.0
+SQLAlchemy==2.0.23
 supervisor==4.2.5
 texttable==1.7.0
 typing_extensions==4.9.0
