--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,11 @@ services:
       - 5000:5000
     environment:
       FLASK_RUN_HOST: 0.0.0.0
+      DB_USER: baza
+      DB_PASSWORD: password
+      DB_HOST: localhost
+      DB_PORT: 5432
+      DB_NAME: exchange_rates
     networks:
       - my_network
 
