--- a/Dockerfile.python
+++ b/Dockerfile.python
@@ -1,24 +1,39 @@
-FROM python:3.9
+# FROM python:3.9
 
-WORKDIR /app
+# WORKDIR /app
 
-COPY requirements.txt .
+# COPY requirements.txt .
 
-RUN pip install -r requirements.txt
+# RUN pip install -r requirements.txt
 
-COPY backend.py .
+# COPY backend.py .
 
-RUN apt-get update && \
-    apt-get install -y libpq-dev && \
-    pip install psycopg2
+# RUN apt-get update && \
+#     apt-get install -y libpq-dev && \
+#     pip install psycopg2
 
-ENV DB_USER=baza
-ENV DB_PASSWORD=password
-ENV DB_HOST=localhost
-ENV DB_NAME=exchange_rates
-ENV DB_PORT=5432
 
 
 # EXPOSE 5000
 
-CMD FLASK_APP=backend python -m flask run --host=0.0.0.0
+# CMD FLASK_APP=backend python -m flask run --host=0.0.0.0 --port 5000
+
+
+
+# Use an official Python runtime as a parent image
+FROM python:3.9
+
+# Set the working directory to /app
+WORKDIR /app
+
+# Copy the current directory contents into the container at /app
+COPY . /app
+
+# Install any needed packages specified in requirements.txt
+RUN pip install --trusted-host pypi.python.org -r requirements.txt
+
+# Expose port 5000 for the Flask app
+EXPOSE 5000
+
+# Run app.py when the container launches
+CMD ["python", "./backend.py"]
