--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "index",
   "version": "1.0.0",
   "scripts": {
-    "start": "react-scripts start",
+    "start": "react-scripts start --host 0.0.0.0",
     "build": "react-scripts build --no-cache"
   },
   "dependencies": {
